# TelxDiscbridge

./: .env.example  .env.template  .gitignore  .replit  FIXES_APPLIED.md  FUNCTIONAL_CHECKLIST_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  config.yaml  debug_bot_permissions.py  fix_fox_session.py  fix_sessions.py  fix_sessions_and_test_pipeline.py  forwarding_bot.db  main.py  migrate_database.py  pyproject.toml  recover_sessions.py  replit.md  requirements.txt  session_key.key  setup_environment.py  test_addpair_workflow.py  test_bot_functionality.py  test_complete_pipeline.py  test_forwarding_pipeline.py  test_report.json  test_sessions_fix.py
admin_bot/: __init__.py  admin_handler.py  advanced_filter_commands.py  bot_management.py  command_examples.md  commands.py  comprehensive_help.py  discord_integration.py  enhanced_commands.py  enhanced_pair_wizard.py  filter_commands.py  image_handler.py  simple_session_commands.py  unified_admin_commands.py  unified_session_commands.py
attached_assets/: Complete Guidelines_ Telegram → Discord → Telegram_1753114356896.md  Pasted--Comprehensive-Verification-Checklist-Telegram-Discord-Telegram-Forwarding-Bot-1-Multi-Session-H-1753172223036_1753172223048.txt  Pasted-Add-full-support-for-multiple-Telegram-user-sessions-1-Session-Abstraction-Refactor-p-1753124937503_1753124937504.txt  Pasted-Add-full-support-for-multiple-Telegram-user-sessions-1-Session-Abstraction-Refactor-p-1753125276947_1753125276948.txt  (+1 more)
config/: __init__.py  env_loader.py  settings.py
core/: __init__.py  advanced_session_manager.py  (+13 more)
(+19 files in other folders)
